# claude-trader

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  mcp-config-snippet.json  pyproject.toml
.citadel/: project.md
.claude/: harness.json
scripts/: com.davidneves.claude-trader-summary.plist  com.davidneves.claude-trader.plist  graduation.py  install-cron.sh  install-launchd.sh  run.py
src/claude_trader/: __init__.py  __main__.py  analyst.py  backtest.py  bot.py  config.py  constants.py  dry_run.py  executor.py  insider.py  journal.py  logger.py  news.py  notifier.py  obsidian.py  performance.py  risk.py  state.py  strategy.py  streaming.py
tests/: conftest.py  test_analyst_insider.py  test_analyst_integration.py  test_backtest.py  test_bot.py  test_config.py  test_dry_run.py  test_executor.py  test_insider.py  test_journal.py  test_logger.py  test_main.py  test_multi_agent.py  test_notifier.py  test_obsidian.py  test_performance.py  test_risk.py  test_state.py  test_strategy.py  test_streaming.py
